# synergism_forkd

./: .env  .env.example  .gitignore  .oxlintrc.json  BACKEND_API_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_PLAN.md  PARITY_AUDIT.md  QUIRKS.md  README.md  SECURITY.md  STATE_AUDIT.md  SYNERGISM_API_BUILD_SPEC.md  Synergism.css  TS_SYSTEMS_MAP.md  _headers  _headers.template  clippy.toml  deny.toml  electron-builder.json  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-auto-review.yml  claude.yml  codeql.yml  deploy-ghpages.yml  desktop-release.yml  electron-build.yml  kong-release.yml  pr-title-lint.yml  purge-cache.yml  rust-bench.yml  rust-ci.yml
.husky/: pre-commit
assets/translations/: en.json
crates/synergismforkd_api/: Cargo.toml
crates/synergismforkd_api/src/: lib.rs  main.rs
crates/synergismforkd_audio/: Cargo.toml
crates/synergismforkd_bignum/: Cargo.toml
crates/synergismforkd_bignum/src/: lib.rs
crates/synergismforkd_common/: Cargo.toml
crates/synergismforkd_logic/: Cargo.toml
crates/synergismforkd_logic/src/: currency.rs  lib.rs
crates/synergismforkd_logic/src/events/: mod.rs
crates/synergismforkd_logic/src/math/: mod.rs  rng.rs  sigmoid.rs  smallest_inc.rs  summations.rs
crates/synergismforkd_logic/src/mechanics/: accelerator_boosts.rs  accelerator_multipliers.rs  accelerators.rs  achievement_awards.rs  achievement_levels.rs  achievement_point_values.rs  achievement_points.rs  achievement_rewards.rs  ambrosia.rs  ant_masteries.rs  ant_producers.rs  ant_reborn_elo.rs  ant_sacrifice_reward_calc.rs  ant_sacrifice_rewards.rs  ant_upgrade_levels.rs  ant_upgrades.rs  ascensions.rs  auto_upgrades.rs  blueberry_upgrades.rs  calculate.rs  campaign_token_rewards.rs  campaigns.rs  challenge_15_rewards.rs  challenges.rs  coin_production.rs  constant_upgrades.rs  corruptions.rs  crystal_and_building_power.rs  crystal_upgrades.rs  cube_blessings.rs  cube_opening.rs  cube_upgrades.rs  event_buffs.rs  exalt_penalties.rs  global_multipliers.rs  golden_quark_upgrades.rs  gq_upgrade_cost.rs  gq_upgrade_levels.rs  hepteract_effects.rs  hepteract_values.rs  (+45 more)
crates/synergismforkd_logic/src/state/: accelerator.rs  achievements.rs  ambrosia.rs  ants.rs  automation.rs  blessings.rs  campaigns.rs  challenges.rs  coin_counters.rs  corruptions.rs  crystal_upgrades.rs  cube_balances.rs  cube_upgrade_levels.rs  event_buffs.rs  g_cache.rs  golden_quarks.rs  hepteracts.rs  level.rs  mod.rs  multiplier.rs  octeract_upgrades.rs  particle_buildings.rs  producer.rs  quarks.rs  red_ambrosia.rs  researches.rs  reset_counters.rs  rng.rs  runes.rs  shop.rs  singularity.rs  talismans.rs  tesseract_buildings.rs  upgrades.rs
crates/synergismforkd_logic/src/tick/: ant_generation.rs  ant_sacrifice.rs  auto_buy.rs  auto_research.rs  auto_reset.rs  automatic_tools.rs  challenge_sweep.rs  mod.rs  reset.rs  timers.rs
crates/synergismforkd_modding/: Cargo.toml
crates/synergismforkd_netcode/: Cargo.toml
crates/synergismforkd_netcode/src/: lib.rs
crates/synergismforkd_save/: Cargo.toml
crates/synergismforkd_save/src/: lib.rs
crates/synergismforkd_testkit/: Cargo.toml
crates/synergismforkd_testkit/fixtures/: parity_aggregators.json  parity_decimal.json  parity_math.json  parity_vectors.json
crates/synergismforkd_testkit/parity/: generate_aggregator_vectors.mjs  generate_decimal_vectors.mjs  generate_math_vectors.mjs  generate_parity_vectors.mjs
crates/synergismforkd_testkit/src/: lib.rs  parity.rs
crates/synergismforkd_ui/: Cargo.toml
crates/synergismforkd_ui/assets/: achievements_en.json
crates/synergismforkd_ui/assets/styles/: base.css  components.css  sections.css  themes.css  tokens.css
crates/synergismforkd_ui/src/: achievement_toast.rs  app.rs  bridge.rs  derive.rs  detail.rs  events_map.rs  gating.rs  i18n.rs  lib.rs  theme.rs
crates/synergismforkd_ui/src/components/: icon.rs  mod.rs
crates/synergismforkd_ui/src/format/: mod.rs  time.rs
crates/synergismforkd_ui/src/hud/: mod.rs
crates/synergismforkd_ui/src/nav/: mod.rs
crates/synergismforkd_ui/src/sections/: header.rs  mod.rs
crates/synergismforkd_ui/src/sections/mystic/: mod.rs  rune_data.rs  runes.rs
crates/synergismforkd_ui/src/sections/production/: achievements.rs  achievements_text.rs  buildings.rs  mod.rs  stats.rs  upgrade_data.rs  upgrade_effects.rs  upgrades.rs
crates/synergismforkd_ui/src/sections/settings/: general.rs  mod.rs  page.rs  saves.rs  themes.rs
crates/synergismforkd_ui/src/stats/: mod.rs
crates/synergismforkd_ui_desktop/: Cargo.toml
crates/synergismforkd_ui_desktop/src/: main.rs
crates/synergismforkd_ui_web/: Cargo.toml  Dioxus.toml
crates/synergismforkd_ui_web/src/: catch_up.rs  lib.rs  loop_driver.rs  main.rs  platform.rs  root.rs  save_host.rs
docs/audits/: STATE_AUDIT.md  rust-best-practices-2026-05-26.md
docs/systems/: README.md  ants.md  ascension-cubes.md  challenges-corruptions.md  core-economy.md  infrastructure.md  meta-economy.md  reset-cascade.md  runes-talismans.md  singularity-ambrosia.md  ui-readiness.md
electron/: main.ts
legacy/core_split/: package-lock.json  package.json
legacy/original/: package-lock.json  package.json
legacy_core_split/: package.json
legacy_original/: .oxlintrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json
scripts/: build.mjs  buildConfig.mjs  loadEnv.mjs  stage.mjs
src/: Achievements.ts  BlueberryUpgrades.ts  Campaign.ts  Config.ts  Corruptions.ts  CubeExperimental.ts  Event.ts  EventListeners.ts  Hepteracts.ts  Hotkeys.ts  ImportExport.ts  Login.ts  Messages.ts  SingularityChallenges.ts  Synergism.ts  Tabs.ts  Themes.ts  Toggles.ts  UpdateHTML.ts  Utility.ts  i18n.ts
src/Cache/: DOM.ts
translations/: en.json
(+43 files in other folders)
