[package]
name = "synergismforkd_netcode"
description = "Reserved — future multiplayer / cloud-sync primitives for Synergism Forkd, distinct from the request/response API server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
