[package]
name = "synergismforkd_save"
description = "Save format, (de)serialization, and migration framework for Synergism Forkd."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
synergismforkd_common = { path = "../synergismforkd_common" }
synergismforkd_logic = { path = "../synergismforkd_logic" }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
synergismforkd_bignum = { path = "../synergismforkd_bignum" }

[lints]
workspace = true
