[package]
name = "synergismforkd_ui_web"
description = "WASM entry point for Synergism Forkd — mounts the synergismforkd_ui Dioxus tree in a browser webview."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
synergismforkd_ui = { path = "../synergismforkd_ui" }

# When this crate is built for wasm32-unknown-unknown, the transitive
# `getrandom` dep (pulled in by `rand`/`rand_chacha` inside
# `synergismforkd_logic::state::rng`) needs its `js` feature enabled or
# the wasm linker errors with "the wasm*-unknown-unknown targets are not
# supported by default". Enabling the feature here is the standard
# Cargo-feature-unification fix; the `js` feature lives in the wasm host
# crate (which already crosses the JS boundary) and stays out of
# `synergismforkd_logic` per the crate-boundary rules.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
